--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "classnames": "^2.3.1",
     "dayjs": "^1.11.2",
     "react": "^18.1.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
@@ -43,6 +44,7 @@
   "devDependencies": {
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
+    "@types/react-datepicker": "^4.4.1",
     "@types/react-dom": "^18.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^8.14.0",
