--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "dayjs": "^1.11.2",
     "html-react-parser": "^1.4.14",
     "react": "^18.1.0",
+    "react-beautiful-dnd": "^13.1.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "6",
@@ -46,6 +47,7 @@
   "devDependencies": {
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-datepicker": "^4.4.1",
     "@types/react-dom": "^18.0.0",
     "babel-eslint": "^10.1.0",
