--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
@@ -26,10 +28,12 @@
       "last 1 safari version"
     ]
   },
+  "homepage": "https://han-byul-yang.github.io/Task-Management/",
   "dependencies": {
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "dayjs": "^1.11.2",
+    "gh-pages": "^4.0.0",
     "html-react-parser": "^1.4.14",
     "react": "^18.1.0",
     "react-beautiful-dnd": "^13.1.0",
