--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://han-byul-yang.github.io/Task-Management/",
+  "homepage": "https://han-byul-yang.github.io/Task_Management/",
   "dependencies": {
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
