--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=3003 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -28,7 +28,6 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://han-byul-yang.github.io/Task_Management/",
   "dependencies": {
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
